Implement mobile navigation menu and toggle functionality, update header links for active states, and enhance mobile styles for better responsiveness.

--- a/customer.html
+++ b/customer.html
@@ -52,21 +52,47 @@
                             </ul>
                         </li>
                         <li><a href="technology.html">기술지원</a></li>
-                        <li class="dropdown active">
-                            <a href="customer.html">고객지원</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#customer-center">고객센터</a></li>
-                                <li><a href="#as-service">A/S 서비스</a></li>
-                                <li><a href="#technical-data">기술자료</a></li>
-                                <li><a href="#online-inquiry">온라인 문의</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="customer.html" class="active">고객지원</a></li>
                         <li><a href="customer.html#online-inquiry">문의하기</a></li>
                     </ul>
                 </nav>
+                <button class="mobile-menu-toggle" id="mobileMenuToggle">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
             </div>
         </div>
     </header>
+
+    <!-- 모바일 네비게이션 -->
+    <nav class="mobile-nav" id="mobileNav">
+        <button class="mobile-close" id="mobileClose">&times;</button>
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li class="dropdown">
+                <a href="company.html">회사소개</a>
+                <ul class="dropdown-menu">
+                    <li><a href="company.html#about">회사개요</a></li>
+                    <li><a href="company.html#history">회사연혁</a></li>
+                    <li><a href="company.html#organization">조직도</a></li>
+                    <li><a href="company.html#location">오시는길</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a href="products.html">제품소개</a>
+                <ul class="dropdown-menu">
+                    <li><a href="products.html#flow-meters">유량계</a></li>
+                    <li><a href="products.html#electromagnetic">전자기 유량계</a></li>
+                    <li><a href="products.html#ultrasonic">초음파 유량계</a></li>
+                    <li><a href="products.html#turbine">터빈 유량계</a></li>
+                </ul>
+            </li>
+            <li><a href="technology.html">기술지원</a></li>
+            <li><a href="customer.html" class="active">고객지원</a></li>
+            <li><a href="customer.html#online-inquiry">문의하기</a></li>
+        </ul>
+    </nav>
 
     <!-- 페이지 타이틀 -->
     <section class="page-title">
